@@ -17,6 +17,8 @@ systemd System and Service Manager
     - remove RefuseManualStart from units which are always around;
     - local-fs.target - don't pull in default dependencies;
     - remove systemd-bus-proxyd socket and service;
+ * busctl:
+    - remove host argument option;
  * systemctl:
     - add preset-all command;
     - remove host argument option;
